--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,11 @@
-spring.mvc.view.prefix=/WEB-INF/jsp/ 
-spring.mvc.view.suffix=.jsp
 
+ 
+spring.mvc.view.prefix=/WEB-INF/views/
+spring.mvc.view.suffix=.jsp
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/
+spring.datasource.username=username
+spring.datasource.password=password
+spring.http.encoding.charset=utf-8
+spring.http.encoding.enabled=true
+spring.http.encoding.force=true
