--- a/.gitignore
+++ b/.gitignore
@@ -1,47 +1,37 @@
-# 컴파일 결과물 제외
-*.com
-*.class
-*.dll
-*.exe
-*.o
-*.so
+HELP.md
+.gradle
+build/
+!gradle/wrapper/gradle-wrapper.jar
+!**/src/main/**/build/
+!**/src/test/**/build/
 
-# 로그파일 제외
-*.log
-
-# 운영체제에서 만드는 시스템 파일들 제외
-.DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
-Thumbs.db
-config.xml
-
-# 프로젝트정보 파일 제외
-.metadata
-bin/
-tmp/
-*.tmp
-*.bak
-*.swp
-*~.nib
-local.properties
-.settings/
-.loadpath
-.recommenders
-.project
-.externalToolBuilders/
-*.launch
+### STS ###
+.apt_generated
 .classpath
 .factorypath
-.buildpath
-.target
-/build/
-target/
+.project
+.settings
+.springBeans
+.sts4-cache
+bin/
+!**/src/main/**/bin/
+!**/src/test/**/bin/
 
-# Spring 팀프로젝트 충돌 방지
-MANIFEST.MF
-pom.properties
-target/
+### IntelliJ IDEA ###
+.idea
+*.iws
+*.iml
+*.ipr
+out/
+!**/src/main/**/out/
+!**/src/test/**/out/
+
+### NetBeans ###
+/nbproject/private/
+/nbbuild/
+/dist/
+/nbdist/
+/.nb-gradle/
+
+### VS Code ###
+.vscode/
