--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,6 @@
 
- 
-spring.mvc.view.prefix=/WEB-INF/views/
-spring.mvc.view.suffix=.jsp
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/
-spring.datasource.username=username
-spring.datasource.password=password
-spring.http.encoding.charset=utf-8
-spring.http.encoding.enabled=true
-spring.http.encoding.force=true
+spring.datasource.hikari.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.hikari.jdbc-url=jdbc:mysql://localhost:3306/board?serverTimezone=UTC&useUnicode=true&characterEncoding=utf8&useSSL=false
+spring.datasource.hikari.username=root
+spring.datasource.hikari.password=123qwe!@#
+spring.datasource.hikari.connection-test-query=SELECT NOW() FROM dual
