--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,6 @@ spring.datasource.hikari.jdbc-url=jdbc:mysql://localhost:3306/momogo?serverTimez
 spring.datasource.hikari.username=root
 spring.datasource.hikari.password=123qwe!@#
 spring.datasource.hikari.connection-test-query=SELECT NOW() FROM dual
+
+#MyBatis
+mybatis.configuration.map-underscore-to-camel-case=true
